# mylab

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
$tmpdir/run/inputs/: goal.txt
$tmpdir/run/manifests/: run.json
.codex/skills/lab-format-guard/: SKILL.md
.codex/skills/lab-plan-implementer/: SKILL.md
.codex/skills/lab-plan-iterator/: SKILL.md
.codex/skills/lab-plan-runner/: SKILL.md
.codex/skills/lab-plan-writer/: SKILL.md
.codex/skills/mylab-job-monitor/: SKILL.md
.codex/skills/mylab-parameter-tuning/: SKILL.md
.codex/skills/mylab-structure-tuning/: SKILL.md
.github/workflows/: publish.yml
docs/: cli.md  concepts.md  layout.md  overview.md
src/mylab/: _toml.py  cli.py  config.py  logging.py  skill_assets.py
src/mylab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/mylab/codex/: __init__.py  client.py  status.py
src/mylab/commands/: root.py
src/mylab/domain/: __init__.py  models.py
src/mylab/flow/: __init__.py  serial.py
src/mylab/gittools/: __init__.py  manager.py
src/mylab/orchestrator/: __init__.py  queue.py
src/mylab/services/: __init__.py  adapter.py  assets.py  executor.py  (+15 more)
tests/: test_adapter_command.py  test_bot_test_command.py  test_executor_notifications.py  test_feishu_bot.py  test_flow_modes.py  test_git_preflight.py  test_interrupt_handling.py  test_job_cleanup.py  test_job_monitor.py  test_notifications.py  test_packaged_skills.py  test_reports.py  test_run_plan_management.py  test_run_trial_management.py  test_smoke_mlp.py  test_telegram_bot.py  test_training_budget_prompting.py
(+22 files in other folders)
