[project]
name = "mylab"
version = "0.1.0"
description = "Codex-based experiment orchestration CLI for research labs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "apprise>=1.9.0",
    "loguru>=0.7.2",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
mylab = "mylab.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
